Bug 834965 - Embedded Youtube videos in iframes do not play in web content r=jst a=tef+